# ProgSD_M5_EVShareApp

./: .gitignore  LICENSE  README.md  __init__.py  classes.py  database.py  main-bak.py  main.py  pyproject.toml  test.py  zevo-dev.db  zevo-dev.db-journal
ProgSD_M5_EVShareApp/: LICENSE  README.md  main.py
ProgSD_M5_EVShareApp/base/: components.py  fonts.py
ProgSD_M5_EVShareApp/screens/: addcard.py  payment_access.py  payment_bill.py  welcome.py  window.py
base/: components.py  database.py  fonts.py
screens/: addcard.py  defect.py  index.py  login.py  management.py  operator.py  pay.py  payment_access.py  payment_bill.py  purchaseHistory.py  register.py  return_and_pay.py  vehicleDetails.py  vehiclesHistory.py  vehiclesView.py  welcome.py  window.py
