[tool.poetry]
name = "evshareapp"
version = "0.1.0"
description = ""
authors = ["Mahesh Adhikari <62585493+mahesh-gfx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.1"
pillow = "^10.0.1"
tkintermapview = "^1.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
