[tool.poetry]
name = "evshareapp"
version = "0.1.0"
description = ""
authors = ["Mahesh Adhikari <62585493+mahesh-gfx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
pillow = "^9.4.0"
tkintermapview = "^1.28"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
